# psd2svg

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  SECURITY.md  morisawa_conflicts.txt  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  security.yml  test.yml
docs/: README.md  api-reference.rst  changelog.rst  clipping.md  command-line.rst  conf.py  configuration.rst  development.rst  fonts.rst  getting-started.rst  images.rst  index.rst  limitations.md  limitations.rst  overlay.md  rasterizers.rst  security.rst  shape-ops.md  technical-notes.rst  user-guide.rst
docs/examples/: advanced_usage.py  basic_conversion.py  rasterization.py
scripts/: add_hiragino_weights.py  check_font_resolution.py  refactor_hiragino_mapping.py  refactor_to_declarative.py  refactor_to_declarative_v2.py
src/psd2svg/: __init__.py  __main__.py  convert.py  eval.py  font_subsetting.py  image_utils.py  resource_limits.py  storage.py  svg_document.py  svg_utils.py  timeout_utils.py  version.py
src/psd2svg/converter/: adjustments.py  constants.py  core.py  effects.py  io.py  shape.py  text.py
src/psd2svg/core/: _font_mapping_data.py  adjustment.py  base.py  color_utils.py  constants.py  converter.py  counter.py  effects.py  font_mapping.py  font_utils.py  gradient.py  layer.py  paint.py  shape.py  svg_utils.py  text.py  type.py  typesetting.py  windows_fonts.py
src/psd2svg/data/: default_fonts.json  morisawa_fonts.json
src/psd2svg/deprecated/: adjustments.py  base.py  constants.py  converter.py  core.py  effects.py  io.py  shape.py  text.py
src/psd2svg/rasterizer/: __init__.py  __main__.py  base_rasterizer.py  batik_rasterizer.py  chromium_rasterizer.py  inkscape_rasterizer.py  playwright_rasterizer.py  resvg_rasterizer.py
src/psd2svg/tools/: __init__.py  __main__.py  convert_morisawa.py  extract_default_fonts.py  generate_font_mapping.py
src/psd2svg/utils/: __init__.py  color.py  xml.py
tests/: conftest.py  test_blend_modes.py  test_convert.py  test_enable_class.py  test_eval.py  test_font_collection.py  test_font_embedding.py  test_font_mapping.py  test_font_markers_example.py  test_font_subsetting.py  test_font_utils.py  test_font_weight_resolution.py  test_generate_font_mapping.py  test_gradient.py  test_optimize.py  test_paint.py  test_playwright_rasterizer.py  test_quality.py  test_resource_limits.py  test_resvg_rasterizer.py  test_storage.py  test_svg_document.py  test_svg_utils.py  test_text.py  test_timeout_utils.py  test_type.py  test_windows_fonts.py
tests/fixtures/: 0layers.psd  0layers_tblocks.psd  16bit5x5.psd  1layer.psd  1layer2.psd  2layers.psd  300dpi.psd  32bit.psd  32bit5x5.psd  adjustment-fillers.psd  advanced-blending.psd  blend-and-clipping.psd  broken-groups.psd  clipping-mask.psd  clipping-mask2.psd  effect-bevelemboss.psd  effect-satin.psd  empty-layer.psd  fill_adjustments.psd  gradient fill.psd  gray0.psd  gray1.psd  group.psd  hidden-groups.psd  hidden-layer.psd  history.psd  layer-effects.psd  layer_comps.psd  layer_effects.psd  layer_mask_data.psd  layer_params.psd  mask.psd  masks.psd  masks2.psd  metadata.psd  note.psd  patterns.psd  pen-text.psd  placedLayer.psd  semi-transparent-layers.psd  (+8 more)
tests/fixtures/adjustments/: brightnesscontrast-b+150-c0.psd  brightnesscontrast-b-150-c0.psd  brightnesscontrast-b0-c+100.psd  brightnesscontrast-b0-c-50.psd  brightnesscontrast-b0-c0.psd  colorbalance-s+100_+100_+100-m+100_+100_+100-h+100_+100_+100-nolum.psd  colorbalance-s+100_+100_+100-m+100_+100_+100-h+100_+100_+100.psd  colorbalance-s+50_0_-50-m0_0_0-h0_0_0.psd  colorbalance-s-100_-100_-100-m-100_-100_-100-h-100_-100_-100-nolum.psd  colorbalance-s-100_-100_-100-m-100_-100_-100-h-100_-100_-100.psd  colorbalance-s0_0_0-m-50_0_+50-h0_0_0.psd  colorbalance-s0_0_0-m0_0_0-h0_-50_-50-nolum.psd  colorbalance-s0_0_0-m0_0_0-h0_-50_-50.psd  colorbalance-s0_0_0-m0_0_0-h0_0_0.psd  curves-b.psd  curves-g.psd  curves-r-g-b.psd  curves-r.psd  curves-rgb-extreme.psd  curves-rgb-r.psd  curves-rgb.psd  exposure-e+4.0-o0.0-g1.0.psd  exposure-e-4.0-o0.0-g1.0.psd  exposure-e0.0-o+0.4-g1.0.psd  exposure-e0.0-o-0.4-g1.0.psd  exposure-e0.0-o0.0-g0.4.psd  exposure-e0.0-o0.0-g1.0.psd  exposure-e0.0-o0.0-g4.0.psd  huesaturation-colorize.psd  huesaturation-h+180-s0-l0.psd  huesaturation-h-180-s0-l0.psd  huesaturation-h0-s+100-l0.psd  huesaturation-h0-s-100-l0.psd  huesaturation-h0-s0-l+100.psd  huesaturation-h0-s0-l-100.psd  huesaturation-h0-s0-l0.psd  invert-clipping-mask.psd  invert-clippingbase.psd  invert-mask-transparent.psd  invert-mask.psd  (+14 more)
tests/fixtures/blend-modes/: effect-color-burn.psd  effect-color-dodge.psd  effect-color.psd  effect-darken.psd  effect-darker-color.psd  effect-difference.psd  effect-dissolve.psd  effect-divide.psd  effect-exclusion.psd  effect-hard-light.psd  effect-hard-mix.psd  effect-hue.psd  effect-lighten.psd  effect-lighter-color.psd  effect-linear-burn.psd  effect-linear-dodge.psd  effect-linear-light.psd  effect-luminosity.psd  effect-multiply.psd  effect-normal.psd  effect-overlay.psd  effect-pin-light.psd  effect-saturation.psd  effect-screen.psd  effect-soft-light.psd  effect-subtract.psd  effect-vivid-light.psd
tests/fixtures/clipping/: clipping-1-raster-with-transform.psd  clipping-1-vector-with-transform.psd  clipping-2-raster-with-transform.psd  clipping-2-vector-with-transform.psd  clipping-3-raster-with-transform.psd  clipping-3-vector-with-transform.psd  clipping-4-pixel-mask-with-transform-w-mask.psd  clipping-4-pixel-mask-with-transform-wo-mask.psd  clipping-4-shape-mask-clippath.psd  clipping-4-shape-mask-with-transform-w-mask.psd  clipping-4-shape-mask-with-transform-wo-mask.psd  clipping-5-mask-with-effect.psd  (+9 more)
(+169 files in other folders)
