[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psd2svg"
version = "0.10.0"
description = "Convert PSD file to SVG file"
authors = [
    { name = "Kota Yamaguchi", email = "yamaguchi_kota@cyberagent.co.jp" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["photoshop", "psd", "svg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "pillow",
    "numpy",
    "psd-tools>=1.12.0",
    "resvg-py>=0.2.3",
    "fontconfig-py>=0.4.0; sys_platform != 'win32'",
    "fonttools[woff]>=4.50.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "ipykernel>=6.30.1",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/kyamagu/psd2svg"
Repository = "https://github.com/kyamagu/psd2svg"

[project.scripts]
psd2svg = "psd2svg.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_noto_sans: marks tests that require Noto Sans font",
    "requires_noto_sans_jp: marks tests that require Noto Sans JP font",
    "requires_noto_sans_cjk: marks tests that require Noto Sans CJK JP font",
    "requires_noto_sans_arabic: marks tests that require Noto Sans Arabic font",
    "requires_noto_sans_devanagari: marks tests that require Noto Sans Devanagari font",
    "requires_noto_sans_thai: marks tests that require Noto Sans Thai font",
    "requires_noto_sans_hebrew: marks tests that require Noto Sans Hebrew font",
    "requires_arial: marks tests that require Arial font (from MS Core Fonts)",
    "requires_playwright: marks tests that require Playwright browser automation",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "psd_tools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fontconfig"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fontTools.*"
ignore_missing_imports = true
